2012-01-21  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/50982
	* testsuite/30_threads/*: Add powerpc-ibm-aix* to target selectors.

2012-01-19  Jakub Jelinek  <jakub@redhat.com>

	PR libstdc++/51845
	* include/bits/hashtable.h
	(_Hashtable<>::erase(const_iterator, const_iterator)): Also update
	_M_buckets[__n_bkt] if __is_bucket_begin.
	* testsuite/23_containers/unordered_multimap/erase/51845-multimap.cc:
	New test.

2012-01-18  Benjamin Kosnik  <bkoz@redhat.com>

	* acinclude (GLIBCXX_CONFIGURE_DOCBOOK): Fix quoting.

2012-01-18  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.ac: Move epub checks...
	* acinclude (GLIBCXX_CONFIGURE_DOCBOOK): ...here, use
	test -f instead of AC_CHECK_FILES.

2012-01-18  François Dumont  <fdumont@gcc.gnu.org>
	    Roman Kononov  <roman@binarylife.net>

	PR libstdc++/51866
	* include/bits/hashtable.h (_Hashtable<>::_M_insert(_Arg, false_type)):
	Do not keep a reference to a potentially moved instance.
	* testsuite/23_containers/unordered_multiset/insert/51866.cc: New.
	* testsuite/23_containers/unordered_multimap/insert/51866.cc: New.

2012-01-17  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/html/*: Regenerate.

2012-01-17  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.ac (BUILD_EPUB): Adjust for epub3.
	* configure: Regenerate.
	* Makefile.in: Same.
	* doc/Makefile.am (stamp-epub-docbook): Update for epub3.
	* doc/Makefile.in: Regenerate.
	* include/Makefile.in: Same.
	* libsupc++/Makefile.in: Same.
	* po/Makefile.in: Same.
	* python/Makefile.in: Same.
	* src/Makefile.in: Same.
	* testsuite/Makefile.in: Same.

	* doc/xml/manual/documentation_hacking.xml: Update.

2012-01-17  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/47852
	* configure.host (irix6.5*): Add -lpthread to OPT_LDFLAGS.

2012-01-14  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/bits/stl_iterator.h (reverse_iterator): Doxygen comments.

2012-01-13  François Dumont  <fdumont@gcc.gnu.org>
