@@ -1,3 +1,10 @@
+2012-01-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	libstdc++-v3:
+	* testsuite/22_locale/num_put/put/char/14220.cc: Don't xfail on
+	32-bit Solaris 10/x86.
+	* testsuite/22_locale/num_put/put/wchar_t/14220.cc: Likewise.
+
 2012-01-21  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	PR libstdc++/50982
